Added more structure to loading, analysing and executing input.